<resources>
    <string name="app_name">NewAMETApp</string>

    <string name="txt_sign">Sign </string>
    <string name="txt_in">In</string>

    <string name="txt_up">Up</string>

    <!--Custom Par Activities Name  -->
    <string name="login_activity">Login</string>
    <string name="Register_activity">Sign Up</string>
    <string name="Forgot_Password">Forgot Password</string>
    <string name="Confirm_Password">Confirm Password</string>


    <!--EditText Hints-->
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>

    <string name="re_password_hint">Re-enterPassword</string>
    <string name="f_name_hint">F-name</string>
    <string name="l_name_hint">L-name</string>
    <string name="phone_hint">PhoneNumber</string>

    <!--Text Login & SignUp Buttons-->
    <string name="login_ptn">Log In</string>
    <string name="SignUp_ptn">Sign Up</string>

    <!--SignIn Links-->
    <string name="Link_SignUp"> ـــــــــ Sign Up ـــــــــ </string>
    <string name="forgot_password_link">Forgot Password</string>

    <!--SignIn CheckBox Show and Hide Password-->
    <string name="show_checkBox">Show</string>
    <string name="hide_checkBox">Hide</string>


    <string name="title_activity_users">UsersActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Forgot Password Activity-->
    <string name="forgot_password_title">Forgot Password?</string>
    <string name="forgot_password_description">We just need your registered Email ..</string>
    <string name="confirm_button">Confirm</string>

    <!--Confirm Password Activity-->
    <string name="confirm_password_titel">Confirm Password</string>
    <string name="description_new_password">Please Enter your new Password..</string>
    <string name="reset_button">Reset</string>

    <style name="SportsDetailTitle" parent="TextAppearance.AppCompat.Headline">
        <item name="android:theme">@style/ThemeOverlay.AppCompat.Dark</item>
    </style>

    <style name="SportsDetailText" parent="TextAppearance.AppCompat.Subhead" />

    <style name="SportsTitle" parent="TextAppearance.AppCompat.Headline" />


    <!--this is New code add-->
    <string name="title_placeholder">Title</string>

    <string name="news_placeholder">News</string>

    <string name="sports_info_placeholder">Here is some news</string>

    <string name="filler_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
        vitae semper quam. In a metus ut nisl pharetra hendrerit et a leo. Curabitur nec sapien
        odio. Vestibulum a mollis felis. Cras molestie felis nibh, ut maximus mauris feugiat
        tincidunt. Curabitur ultricies eros sed ipsum pulvinar vehicula. Maecenas volutpat,
        massa sit amet aliquam eleifend, massa lorem tempor sapien, eget finibus massa dolor
        molestie lorem. Suspendisse at purus mauris. Proin nibh ligula, suscipit vel pharetra
        posuere, bibendum id lorem.</string>

    <string-array name="sports_titles">
        <item>Baseball</item>
        <item>Badminton</item>
        <item>Basketball</item>
        <item>Bowling</item>
        <item>Cycling</item>
        <item>Golf</item>
        <item>Running</item>
        <item>Soccer</item>
        <item>Swimming</item>
        <item>Table Tennis</item>
        <item>Tennis</item>
    </string-array>

    <string-array name="sports_info">
        <item>Here is some Baseball news!</item>
        <item>Here is some Badminton news!</item>
        <item>Here is some Basketball news!</item>
        <item>Here is some Bowling news!</item>
        <item>Here is some Cycling news!</item>
        <item>Here is some Golf news!</item>
        <item>Here is some Running news!</item>
        <item>Here is some Soccer news!</item>
        <item>Here is some Swimming news!</item>
        <item>Here is some Table Tennis news!</item>
        <item>Here is some Tennis news!</item>
    </string-array>

    <array name="sports_images">
        <item>@drawable/img_baseball</item>
        <item>@drawable/img_badminton</item>
        <item>@drawable/img_basketball</item>
        <item>@drawable/img_bowling</item>
        <item>@drawable/img_cycling</item>
        <item>@drawable/img_golf</item>
        <item>@drawable/img_running</item>
        <item>@drawable/img_soccer</item>
        <item>@drawable/img_swimming</item>
        <item>@drawable/img_tabletennis</item>
        <item>@drawable/img_tennis</item>
    </array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


</resources>
