<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetailActivity"
    android:background="#ba1e1f2d">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ba1e1f2d">

        <ImageView
            android:id="@+id/sportsImageDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true" />

        <TextView
            android:id="@+id/titleDetail"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/sportsImageDetail"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/title_placeholder"
            android:theme="@style/ThemeOverlay.AppCompat.Light"/>

        <TextView
            android:id="@+id/newsTitleDetail"
            style="@style/SportsDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sportsImageDetail"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/news_placeholder"
            android:textColor="@color/WhiteColor" />

        <TextView
            android:id="@+id/subTitleDetail"
            style="@style/SportsDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/newsTitleDetail"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/filler_text" />
    </RelativeLayout>


</ScrollView>