<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignInActivity">


    <include
        android:id="@+id/login_toolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_toolbar"
        app:srcCompat="@drawable/n" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#922e2f3a"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp">


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.example.mm.newametapp.customfonts.TitleFont
                        android:id="@+id/titleFont"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/txt_sign"
                        android:textColor="@color/redColor"
                        android:textSize="24sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.example.mm.newametapp.customfonts.TitleFont
                        android:id="@+id/editTextTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/txt_in"
                        android:textColor="@color/WhiteColor"
                        android:textSize="24sp"
                        app:layout_constraintStart_toEndOf="@+id/titleFont"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/email_id"
                        style="@style/edetTextRegester"
                        android:layout_marginTop="40dp"
                        android:drawableEnd="@drawable/ic_email_black_24dp"
                        android:drawableRight="@drawable/ic_email_black_24dp"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editTextTitle" />

                    <EditText
                        android:id="@+id/passowrd_id"
                        style="@style/edetTextRegester"
                        android:layout_marginTop="16dp"
                        android:drawableEnd="@drawable/ic_lock_black_24dp"
                        android:drawableRight="@drawable/ic_lock_black_24dp"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/email_id" />

                    <CheckBox
                        android:id="@+id/show_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/show_checkBox"
                        android:textColor="@color/WhiteColor"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/passowrd_id" />

                    <Button
                        android:id="@+id/sign_in_button"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:background="@drawable/ic_btn_sign_up_activity"
                        android:padding="5dp"
                        android:text="@string/login_ptn"
                        android:textAllCaps="false"
                        android:textColor="@color/WhiteColor"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/show_id" />

                    <com.example.mm.newametapp.customfonts.MyTextView
                        android:id="@+id/forgotPassword"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="48dp"
                        android:background="@color/colorPrimary"
                        android:gravity="center"
                        android:text="@string/forgot_password_link"
                        android:textColor="@color/redColor"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />

                    <View
                        android:id="@+id/v"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/WhiteColor"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/forgotPassword" />

                    <com.example.mm.newametapp.customfonts.MyTextView
                        android:id="@+id/signUp_link"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@color/colorPrimary"
                        android:fontFamily="sans-serif"
                        android:gravity="center"
                        android:text="@string/Link_SignUp"
                        android:textColor="@color/WhiteColor"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/v" />

                </android.support.constraint.ConstraintLayout>

            </ScrollView>

        </android.support.constraint.ConstraintLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>